<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.s1030341.SecActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView1"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_below="@+id/textView"
        android:layout_marginTop="21dp"
        android:layout_alignParentStart="true"
        android:layout_height="50dp"
        android:id="@+id/radioGroup">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:text="@string/ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/sixteen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />
        </LinearLayout>
    </RadioGroup>

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="89dp" />

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button8" />

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_below="@+id/button7"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toEndOf="@+id/button1" />

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button6"
        android:layout_toEndOf="@+id/button5" />

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button0"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button22"
        android:layout_below="@+id/button2"
        android:layout_toEndOf="@+id/button1" />

    <Button
        android:text="@string/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button23"
        android:layout_alignBaseline="@+id/button22"
        android:layout_alignBottom="@+id/button22"
        android:layout_toEndOf="@+id/button22" />

    <Button
        android:text="@string/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button27"
        android:layout_alignBaseline="@+id/button23"
        android:layout_alignBottom="@+id/button23"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button24"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button25"
        android:layout_below="@+id/button24"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button26"
        android:layout_below="@+id/button25"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
